testsuite/tests/tool-toplevel/install_printer.compilers.reference
type t = A | B
val print_t : Format.formatter -> t -> unit = <fun>
Line 4, characters 0-4:
4 | type u = C of t;;
    ^^^^
Error: Syntax error
- : t = B
Line 5, characters 0-4:
5 | type old =
    ^^^^
Error: Syntax error
Unbound value print_old.
Line 2, characters 1-3:
2 | [OA; OB];;
     ^^
Error: Unbound constructor "OA"
Unbound value print_old.
Line 5, characters 0-4:
5 | type ('a, 'b) v = D of 'a * 'b
    ^^^^
Error: Syntax error
Unbound value print_generic.
Line 2, characters 1-2:
2 | [D (0, A); D (42, B)];;
     ^
Error: Unbound constructor "D"
Line 5, characters 0-1:
5 | #install_printer List.map
    ^
Error: Syntax error


Line 3, characters 0-0:
Error: Syntax error

